# Deep

./: .env.example  .gitignore  .pre-commit-config.yaml  ACKNOWLEDGEMENTS.md  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  README.md  RELEASE_v1.2.0.md  SECURITY.md  agent_instructions.md  agent_prompts.py  agent_scoring.py  claude_resume_bash.txt  directory_tree.txt  docker-compose.blue-green.yml  docker-compose.prod.yml  docker-compose.release.yml  docker-compose.yml  install.ps1  install.sh
.github/workflows/: production-readiness.yml
backend/: .dockerignore  Dockerfile  _smoke_test.py  pyproject.toml  requirements-dev.txt  requirements.txt
backend/app/: config.py  dependencies.py  eval_runner.py  lifespan.py  main.py  state.py  websocket_handlers.py
backend/app/middleware/: __init__.py  auth.py  correlation.py  cors.py  headers.py  rate_limit.py
backend/app/prompts/: content_creation.yaml  deep_research.yaml  fact_extraction.yaml  guided_learning.yaml  question_generator.yaml  rag_judge.yaml  solve_agents.yaml
backend/app/routers/: agent.py  backup.py  benchmarks.py  config_routes.py  data_routes.py  health.py  knowledge.py  memory.py  model_routes.py  query.py  retrieval.py  system.py  system_shared.py  vram.py
backend/app/services/: agent_permissions.py  agentic_tree_navigator.py  alerting.py  ara_compiler.py  audit.py  backup.py  base.py  benchmark_runner.py  complexity_scorer.py  content_creation.py  corpus_index.py  deep_research.py  document_processor.py  embedding_service.py  entropy_auditor.py  evaluation_dataset.json  exploration_dag.py  fact_extractor.py  failure_attribution.py  guided_learning.py  hybrid_rag.py  input_origin.py  intervention_logger.py  knowledge_graph.py  lm_studio_client.py  logging_config.py  memory_consolidator.py  memory_context.py  memory_maintenance.py  memory_service.py  metrics.py  model_discovery.py  model_manager.py  model_providers.py  ocr_engine.py  outer_reflection.py  pageindex_generator.py  plugin_protocol.py  prompt_registry.py  provenance_audit.py  (+28 more)
backend/app/services/memory/: dead_ends.py  episodes.py  facts.py  observations.py  profiles.py
backend/app/validation/: __init__.py  __main__.py  baselines.py  config_validator.py  coverage_tracker.py  health_checker.py  remediation_tracker.py  runner.py  validation_routes.py
backend/reports/: ragas_evaluation.json
backend/scripts/: migrate_to_memory.py  validate_prompts.py
backend/tests/: conftest.py  locust_load.py  manual_smoke_lm_studio.py  test_agent_router.py  test_alerting.py  test_ara_compiler.py  test_benchmark_runner.py  test_complexity_scorer.py  test_config.py  test_content_creation.py  test_contract.py  test_deep_research.py  test_dependencies.py  test_document_extractors.py  test_document_processor.py  test_e2e.py  test_embedding_service.py  test_error_recovery.py  test_guided_learning.py  test_hybrid_rag.py  test_key_rotation.py  test_knowledge_router.py  test_knowledge_router_ext.py  test_lifespan.py  test_lm_studio_client.py  test_memory_concurrency.py  test_memory_consolidator.py  test_memory_integration.py  test_memory_learning.py  test_memory_performance.py  test_memory_router.py  test_memory_security.py  test_memory_service.py  test_memory_transactions.py  test_metrics.py  test_model_discovery.py  test_model_manager.py  test_ocr_engine.py  test_pageindex_generator.py  test_performance.py  (+31 more)
desktop/: README.md  main.js
docs/: 01-product-requirements.md  02-system-architecture.md  03-inference-strategy.md  DEFERRED_ITEMS.md  ENHANCEMENT_TRACKER.md  PAGEINDEX_AND_TURBOQUANT_IMPLEMENTATION_GUIDE.md  RELEASE_PROGRESS.md  STATUS.md  UNIFIED_PLAN.md  deployment.md  next_step_analysis.md  production-readiness-audit.md  udip_production_audit.md
docs/adr/: 0001-record-architecture-decisions.md
docs/research/: EXCELLENCE_AUDIT.md  agent-native.md  ai-research-skills.md  deeptutor-claude-skill.md  deeptutor.md  pageindex.md  recursivemas.md
docs/superpowers/: STATUS.md
frontend/: .dockerignore  AGENTS.md  CLAUDE.md  Dockerfile  next.config.ts  package-lock.json  package.json
frontend/__tests__/: setup.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: error-boundary.tsx  notify-bridge.tsx  theme-script.tsx
frontend/hooks/: use-chat-auto-scroll.ts  use-cross-tab-sync.ts  use-smooth-stream.ts
frontend/lib/: config.ts  estimate-vram.ts  i18n.tsx  knowledge.ts  markdown-citations.ts  memory.ts  notifications.ts  theme-constants.ts  use-upload-polling.ts  websocket.ts
frontend/locales/: en.json  zh.json
frontend/providers/: memory-provider.tsx  (+2 more)
scripts/: build-offline-package.sh  deploy-blue-green.sh  generate_hashed_requirements.py  nginx-blue-green.conf  orchestrate.py  verify-offline.ps1  verify-offline.sh
test_documents/: Express Entry Candidates by Province or Territory and Invitation Category.csv  Gujarat & India Business Incentives 2026.md  Temporary Foreign Worker Program (TFWP) work permit holders on December 31st by country of citizenship.xls  bis-enp-bp-guidelines-templates-a-c.xlsx
(+97 files in other folders)
