[project]
name = "udip-backend"
version = "0.1.0"
description = "FastAPI backend for Unified Document Intelligence Pipeline"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-multipart>=0.0.18",
    "websockets>=14.0",
    "PyMuPDF>=1.24",
]

[project.optional-dependencies]
gpu = ["pynvml>=12.0"]
dev = ["pytest", "httpx", "pytest-asyncio"]
pdf = ["PyMuPDF>=1.24"]
