[project]
name = "udip-backend"
version = "0.1.0"
description = "FastAPI backend for Unified Document Intelligence Pipeline"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-multipart>=0.0.18",
    "websockets>=14.0",
    "PyMuPDF>=1.24",
    "numpy>=1.26",
    "httpx>=0.27",
    "python-pptx>=1.0",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "pandas>=2.0",
    "openpyxl>=3.1",
    "python-docx>=1.1",
    "pytesseract>=0.3",
    "easyocr>=1.7",
    "odfpy>=1.4",
    "striprtf>=0.0.26",
    "ebooklib>=0.18",
    "html2text>=2024.1",
    "extract-msg>=0.45",
    "mail-parser>=3.15",
    "xlrd>=2.0",
    "ragas>=0.2.0",
]

[project.optional-dependencies]
gpu = ["pynvml>=12.0", "nvidia-cudnn>=8.9.7", "nvidia-cublas>=12.8.0"]
dev = ["pytest>=8.0", "httpx>=0.27", "pytest-asyncio>=0.23"]
pdf = ["PyMuPDF>=1.24"]
