[project]
name = "udip-backend"
version = "0.1.0"
description = "FastAPI backend for Unified Document Intelligence Pipeline"
requires-python = ">=3.12,<3.14"
dependencies = [
    "fastapi>=0.115,<1.0",
    "uvicorn[standard]>=0.34,<1.0",
    "pydantic>=2.0,<3.0",
    "pydantic-settings>=2.0,<3.0",
    "python-multipart>=0.0.18,<1.0",
    "websockets>=14.0,<16.0",
    "PyMuPDF>=1.24,<2.0",
    "numpy>=1.26,<3.0",
    "opentelemetry-exporter-otlp>=1.27,<2.0",
    "httpx>=0.27,<1.0",
    "python-pptx>=1.0,<2.0",
    "beautifulsoup4>=4.12,<5.0",
    "lxml>=5.0,<7.0",
    "pandas>=2.0,<3.0",
    "openpyxl>=3.1,<4.0",
    "python-docx>=1.1,<2.0",
    "pytesseract>=0.3,<1.0",
    "easyocr>=1.7,<2.0",
    "odfpy>=1.4,<2.0",
    "striprtf>=0.0.26,<1.0",
    "ebooklib>=0.18,<1.0",
    "html2text>=2024.1,<2026.0",
    "extract-msg>=0.45,<1.0",
    "mail-parser>=3.15,<4.0",
    "xlrd>=2.0,<3.0",
    "slowapi>=0.1.9,<1.0",
    "keyring>=24.0,<26.0",
    "filelock>=3.12,<4.0",
    "prometheus_client>=0.20,<1.0",
    "aiosqlite>=0.19,<1.0",
    "opentelemetry-instrumentation-fastapi>=0.43,<1.0",
]

[project.optional-dependencies]
gpu = ["pynvml>=12.0,<14.0", "nvidia-cublas>=12.0,<14.0", "nvidia-cudnn-cu12>=9.0,<10.0"]
json-logging = ["python-json-logger>=3.0,<4.0"]
pdf = ["PyMuPDF>=1.24,<2.0"]
type-check = ["mypy>=1.10,<2.0", "types-PyYAML>=6.0,<7.0"]

[dependency-groups]
dev = ["pytest>=8.0,<10.0", "httpx>=0.27,<1.0", "pytest-asyncio>=0.23,<1.0", "pytest-cov>=5.0,<7.0", "mypy>=1.10,<2.0", "ruff>=0.6,<1.0", "black>=26.3.1,<27.0", "isort>=5.13,<6.0"]

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = ["turboquant_plus", "tests", "app/validation"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM", "RUF"]
ignore = [
    "E501",  # line too long (we use black for this)
    "B008",  # function call in default argument (FastAPI Depends pattern)
    "RUF012", # mutable class attributes (used for class-level config)
]
per-file-ignores = {"__init__.py" = ["F401"]}

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]
extend-exclude = "turboquant_plus"

[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["app"]
extend_skip_glob = ["turboquant_plus/*"]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.setuptools.package-data]
app = ["py.typed"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short --strict-markers"
filterwarnings = [
    "ignore::DeprecationWarning:websockets.*",
    "ignore::FutureWarning:pynvml.*",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests requiring external services",
]

[tool.coverage.run]
source = ["app"]
omit = ["tests/*", "app/validation/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
disallow_untyped_defs = false
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_optional = true
check_untyped_defs = false
exclude = [
    "tests/",
    "app/validation/",
    "turboquant_plus/",
]

[[tool.mypy.overrides]]
module = "app.routers.*"
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = "app.services.*"
disallow_untyped_defs = false
